--- a/MiniProject/src/main/webapp/WEB-INF/web.xml
+++ b/MiniProject/src/main/webapp/WEB-INF/web.xml
@@ -57,6 +57,15 @@
 		<url-pattern>/</url-pattern>
 
 	</servlet-mapping>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/movie/error.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/movie/error.jsp</location>
+	</error-page>
 
 
 </web-app>
